  * Added a warning to skeleton/binsonc++.h that until the #undef instruction
    Parser will be read as ParserBase.

  * With Polymorphic semantic values a tag mismatch is no considered fatal
    anymore if errors were already encountered. In that case the semantic
    value showing a tag mismatch is replaced by the default value of the
    semantic value of the expected polymorphic type.

TODO  * The build script now properly recognizes the 'strip' option

  * Compilation now starts with the construction of precompiled headers,
    significantly reducing the compilation time.

  * The state stack elements now consist of two size_t values: the first
    element holds the stack index, the second element can be used as index to
    an error message to display. 

  * The member functions msgIdx__() and msgIdx(size_t) can be used by the
    parser to (resp.) retrieve and set the current state's message index. The
    message index is initialized to 0 for the 1st parsing-state.


TODO: * Documentation was updated to reflect the above modifications

bisonc++ (5.03.00)

  * Added a declaration like 'Parser() = default' to the generated parser
    class header file.

  * Added an item about exsiting constructors and how to add additional
    constructors to parser classes generated by bisonc++

  * Corrected 'see also' references in the man-pages.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 28 Jan 2017 15:12:16 +0100

bisonc++ (5.02.02)

  * Updated the description of the %prec directive.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 24 May 2016 16:33:48 +0530

bisonc++ (5.02.01)

  * Repaired an error in 'build install LOG...'.

  * Verified that 'selection' in 'build install selection' was correctly
    specified. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 18 May 2016 17:34:28 +0530

bisonc++ (5.02.00)

  * The polymorphic semantic values implementation uses a unique_ptr when
    transferring semantic values inside the geerated parser (including