@@ -1,14 +1,12 @@
 #include "lookaheadset.ih"
 
-void LookaheadSet::basicLAset(ostream &out) const
+bool LookaheadSet::basicLAset(std::ostream &out) const
 {
-    out << "    {";
-
     for (auto const *token: *this)
     {
         if (token->value() != 0)
             out << token << ", ";
     }
 
-    out << "},\n";
+    return hasEOF();
 }
