@@ -23,17 +23,17 @@ $insert 4 scannerobject
         int parse();
 
     private:
-        void error(char const *msg);    // called on (syntax) errors
+        void error();                   // called on (syntax) errors
         int lex();                      // returns the next token from the
                                         // lexical scanner. 
         void print();                   // use, e.g., d_token, d_loc
 
     // support functions for parse():
         void executeAction(int ruleNr);
-        void errorRecovery();
         int lookup(bool recovery);
         void nextToken();
         void print__();
+        void errorRecovery();
         void exceptionHandler__(std::exception const &exc);
 };
 
