@@ -37,12 +37,11 @@ void State::allStates()
     "   0 (removed by precedence): On C ...\n"
     "       in which case a production rule's precedence took priority\n"
     "Also, reduction item(s) may be listed\n"
-    "\n"
     "\n";
 
-    copy(s_state.begin(), s_state.end(), 
-                ostream_iterator<State const *>(imsg, "\n"));
+    imsg << '\n';
 
-    imsg << endl;
+    copy(s_state.begin(), s_state.end(), 
+                ostream_iterator<State const *>(imsg));
 }
 
