@@ -2,7 +2,8 @@
 
 ostream &State::insertStd(ostream &out) const
 {
-    out << "State " << d_idx << ":\n";
+    out <<  "\n"
+            "State " << d_idx << ":\n";
 
     for (size_t idx = 0; idx != d_nKernelItems; ++idx)
         out << d_itemVector[idx] << '\n';
@@ -13,6 +14,6 @@ ostream &State::insertStd(ostream &out) const
     for (size_t idx = 0; idx != d_reducible.size(); ++idx)
         out << "  Reduce by " << d_itemVector[d_reducible[idx]] << '\n';
 
-    return out << d_srConflict << d_rrConflict << '\n';
+    return out << d_srConflict << d_rrConflict;
 }
 
