@@ -6,6 +6,7 @@
 #include <functional>
 #include <iterator>
 #include <iomanip>
+#include <vector>
 
 #include <bobcat/mstream>
 #include <bobcat/arg>
