@@ -1,13 +1,14 @@
 #include "writer.ih"
 
 // static
-void Writer::errorLAset(State const *sp, std::ostream &out)
+void Writer::errorLAset(size_t *idx, State const *sp, std::ostream &out)
 {
-    if (not (sp->type() & StateType::ERR_ITEM))
-        return;
-
-    sp->insertLAset(out);
-}
+    if (sp->type() & StateType::ERR_ITEM)
+    {
+        sp->insertLAset(out);               // insert this State's _error_ 
+        out << " // " << ++*idx << '\n';    // LA set
+    }
+} 
 
 
 
